--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,16 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- thirdparty -->
+        <slf4j-api.version>1.7.10</slf4j-api.version>
+        <slf4j-log4j12.version>1.7.10</slf4j-log4j12.version>
+        <logback-classic.version>1.1.2</logback-classic.version>
+        <logback-core.version>1.1.2</logback-core.version>
+
+        <yamlbeans.version>1.09</yamlbeans.version>
+
+        <gson.version>2.3.1</gson.version>
+        <rest-assured.version>2.4.0</rest-assured.version>
+
         <testng.version>6.8.21</testng.version>
         <hamcrest-core.version>1.3</hamcrest-core.version>
 
@@ -30,6 +40,53 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j-api.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <!-- bind actual underlying logging system on runtime -->
+            <!-- to use log4j in test
+                 -Dlog4j.configuration=log4j-test.properties
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j-log4j12.version}</version>
+                <scope>test</scope>
+            </dependency>
+            -->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback-classic.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>${logback-core.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.esotericsoftware.yamlbeans</groupId>
+                <artifactId>yamlbeans</artifactId>
+                <version>${yamlbeans.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.jayway.restassured</groupId>
+                <artifactId>rest-assured</artifactId>
+                <version>${rest-assured.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
