--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,11 @@
 
         <yamlbeans.version>1.09</yamlbeans.version>
 
-        <gson.version>2.3.1</gson.version>
+        <mysql-connector-java.version>5.1.34</mysql-connector-java.version>
+        <jdbi.version>2.59</jdbi.version>
+
         <rest-assured.version>2.4.0</rest-assured.version>
+        <gson.version>2.3.1</gson.version>
 
         <testng.version>6.8.21</testng.version>
         <hamcrest-core.version>1.3</hamcrest-core.version>
@@ -40,6 +43,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>compile</scope>
+            </dependency>
+
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -77,14 +87,25 @@
             </dependency>
 
             <dependency>
-                <groupId>com.google.code.gson</groupId>
-                <artifactId>gson</artifactId>
-                <version>${gson.version}</version>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql-connector-java.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.jdbi</groupId>
+                <artifactId>jdbi</artifactId>
+                <version>${jdbi.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.jayway.restassured</groupId>
                 <artifactId>rest-assured</artifactId>
                 <version>${rest-assured.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
             </dependency>
 
             <dependency>
