--- a/ta/src/test/resources/APISet.yml
+++ b/ta/src/test/resources/APISet.yml
@@ -1,3 +1,3 @@
 !com.hcwins.vehicle.evs.ta.APISet
-enterprise: !com.hcwins.vehicle.evs.ta.apiset.Enterprise
+enterprise: !com.hcwins.vehicle.evs.ta.apiset.EnterpriseAPI
     captchaRegist: /enterprise/captchaRegist
