--- a/ta/src/test/resources/DataSet.yml
+++ b/ta/src/test/resources/DataSet.yml
@@ -1,10 +1,10 @@
 !com.hcwins.vehicle.evs.ta.DataSet
 enterprises:
-    - !com.hcwins.vehicle.evs.ta.data.Enterprise
-      enterpriseName: ss
+    - !com.hcwins.vehicle.evs.ta.data.EnterpriseData
+      enterpriseName: try
 
 enterpriseAdmins:
-    - !com.hcwins.vehicle.evs.ta.data.EnterpriseAdmin
+    - !com.hcwins.vehicle.evs.ta.data.EnterpriseAdminData
       mobile: 15881100000
-    - !com.hcwins.vehicle.evs.ta.data.EnterpriseAdmin
+    - !com.hcwins.vehicle.evs.ta.data.EnterpriseAdminData
       mobile: 15881100001
