--- a/jmeter-protocol/pom.xml
+++ b/jmeter-protocol/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ta-jmeter-protocol</artifactId>
+    <packaging>jar</packaging>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.jmeter</groupId>
+            <artifactId>ApacheJMeter_core</artifactId>
+            <version>2.13</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
