add tests for enterprise regist about Verify mobile and catcha and relevant file

--- a/evs/src/test/resources/APISet.yml
+++ b/evs/src/test/resources/APISet.yml
@@ -1,3 +1,5 @@
 !com.hcwins.vehicle.ta.evs.APISet
 enterprise: !com.hcwins.vehicle.ta.evs.apiset.EnterpriseAPI
     captchaRegist: /enterprise/captchaRegist
+    VerifyMobileAndCaptcha: /enterprise/verifyMobileAndCaptcha
+    CancelAdmin: /enterprise/cancelAdmin
