--- a/jmeter-protocol/pom.xml
+++ b/jmeter-protocol/pom.xml
@@ -19,5 +19,35 @@
             <version>2.13</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.hcwins.vehicle.protocol</groupId>
+            <artifactId>obd</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <descriptors>
+                        <descriptor>${pom.basedir}/jar-with-dependencies.xml</descriptor>
+                    </descriptors>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
