--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>evs</module>
         <module>jmeter-protocol</module>
+        <module>dummy</module>
     </modules>
 
     <properties>
