--- a/evs/pom.xml
+++ b/evs/pom.xml
@@ -57,6 +57,10 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>de.undercouch</groupId>
+            <artifactId>bson4jackson</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.testng</groupId>
