--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 
         <rest-assured.version>2.4.0</rest-assured.version>
         <gson.version>2.3.1</gson.version>
+        <bson.version>2.4.0</bson.version>
 
         <testng.version>6.8.21</testng.version>
         <hamcrest-core.version>1.3</hamcrest-core.version>
@@ -107,6 +108,11 @@
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>${gson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>de.undercouch</groupId>
+                <artifactId>bson4jackson</artifactId>
+                <version>${bson.version}</version>
             </dependency>
 
             <dependency>
